Customize 404 error page.

--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>404 &ndash; Page not found</h1>
+  <h2>Please check your links, or visit the <a href="{{ site.baseurl }}/">main page</a></h2>
   <br/>
 
-  <img src="{{ site.baseurl }}/img/404-southpark.jpg" />
+  <img src="{{ site.baseurl }}/img/404-ProofGeneral.png" />
 </div>
